Added K2612A, plot rendering order fix, fix to private classes within TC classes, and beginnings of Translator interface to better implement translation/rotation stages etc.